feat(authentication controllers): finalization of the first version of the login controller

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -23,7 +23,7 @@
         "@typescript-eslint/no-misused-promises": [
             "error",
             {
-                "checksConditionals": true
+                "checksVoidReturn": false
             }
         ],
         "import-helpers/order-imports": [
